Make like action more visible, fix jumping to top.
The like button was a a-link, but is now a span with cursor:pointer

--- a/resources/sass/components/status.scss
+++ b/resources/sass/components/status.scss
@@ -33,6 +33,7 @@
 
         .like {
             color: #f5a530;
+            cursor: pointer;
         }
 
         .list-inline-item:not(:last-child) {
